--- a/day06/.project
+++ b/day06/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day06_object</name>
+	<name>day06</name>
 	<comment></comment>
 	<projects>
 	</projects>
